Trying to fix mobile image stretching

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -26,8 +26,7 @@
 }
 
 .projImg{
-  width: 100%;
-  height: 150px;
+  max-height: 100px;
   object-fit: cover;
 }
 
